--- a/view/common/block-layout/html-introduction-dark.phtml
+++ b/view/common/block-layout/html-introduction-dark.phtml
@@ -9,13 +9,13 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css colour-scheme-4 padding-1 padding-vertical-2 medium-padding-2 large-padding-vertical-3 <?= $this->escapeHtmlAttr($divclass) ?>">
-    <div class="grid-x grid-container">
+<div class="full-width-css colour-scheme-4 padding-vertical-1 flex-container <?= $this->escapeHtmlAttr($divclass) ?>">
+    <div class="grid-x grid-container flex-container">
         <div class="page-header">
             <?php if (!empty($heading)): ?>
             <h2><?= $escape($heading) ?></h2>
             <?php endif; ?>
-            <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3">
+            <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 lead">
                 <?= $html ?>
             </div>
         </div>
