--- a/view/common/block-layout/html-introduction.phtml
+++ b/view/common/block-layout/html-introduction.phtml
@@ -9,13 +9,15 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="lead full-width-css padding-1 padding-vertical-2 medium-padding-2 large-padding-vertical-3 <?= $this->escapeHtmlAttr($divclass) ?>">
-    <div class="grid-x grid-container">
+<div class="full-width-css padding-vertical-1 flex-container <?= $this->escapeHtmlAttr($divclass) ?>">
+    <div class="grid-x grid-container flex-container">
         <div class="page-header">
             <?php if (!empty($heading)): ?>
             <h2><?= $escape($heading) ?></h2>
             <?php endif; ?>
-            <?= $html ?>
+            <div class="padding-vertical-1 medium-padding-vertical-2 large-padding-vertical-3 lead">
+                <?= $html ?>
+            </div>
         </div>
     </div>
 </div>
