Revised Item Show to display only one viewer

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -658,7 +658,7 @@ nav.breadcrumbs {
     width: 100%;
     max-width: 100%;
     background-color: rgba(255,255,255,.8);
-    padding: 1rem 2.5rem;
+    padding: 1rem 0 1rem 1rem;
   }
 
   .hero-image .hero-title-bottom h1 {
@@ -687,9 +687,9 @@ nav.breadcrumbs {
 
   .hero-title-caption .caption p {
       font-size: $global-font-size;
-      margin: 0 0 0.5 * $global-margin 0;
-      color: lighten($black, 30%);
-      padding-top: rem-calc(8);
+      margin: 0 0 0.5 * $global-margin $global-margin;
+      color: lighten($black, 35%);
+      padding-top: rem-calc(7);
   }
   
   /*Hero image sizes*/
@@ -1216,7 +1216,7 @@ margin-top: 2 * $global-margin;
 /*IvyRze blocks*/ 
 /*Accordion*/ 
 .accordion-trigger {
-  padding-block: 20px;
+  padding-block: 20px!important;
   }
   
   button.accordion-trigger {
@@ -1251,11 +1251,6 @@ section.image-banner {
   @include breakpoint(medium) {
     margin-top: -2 * $global-margin;
   }
-}
-
-/*Accordion*/ 
-button.accordion-trigger {
-  cursor: pointer;
 }
 
 /*Additional Search Bar*/
