Removed padding and margin from hero-title-caption

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -680,9 +680,9 @@ nav.breadcrumbs {
   .hero-title-caption {
     width: 100%;
     background-color: rgb(247 247 247);
-    padding: rem-calc(6) 0 0 0;
+    padding: 0;
     border-bottom: solid rem-calc(1px) $light-gray;
-    margin: rem-calc(-7) 0 0 0;
+    margin: 0;
   }
 
   .hero-title-caption .caption p {
