--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -190,7 +190,14 @@ h1.site-title {
   margin: $global-margin;
 }
 
-header .top-bar-right,
+header .top-bar-right {
+  display: none;
+  @include breakpoint(large) {
+    display: flex;
+    align-items: center;
+  }
+}
+
 header .top-bar-left {
   display: flex;
   align-items: center;
