Added earlier rule to disable hamburger menu for larger screens

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -226,6 +226,9 @@ header .top-bar {
   display: inline-block;
   background-color: transparent;
   padding: 0;
+  @include breakpoint(large) {
+    display: none;
+  }
   
   button {
     margin: 0 $global-margin 0 0;
