--- a/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
@@ -13,7 +13,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 <div class="full-width-css medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
     <div class="col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="item-showcase item-showcase-openseadragon item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
+            <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center">
                 <?php
                 $item = $attachment->item();
                 if ($item):
