--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark-metadata.phtml
@@ -10,8 +10,8 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
         </div>
     <?php endif; ?>
 </div>
-<div class="full-width-css medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-    <div class="col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
+<div class="full-width-css medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3 background-colour-uom-footer">
+    <div class="col-container col-media-container medium-padding-1">
         <?php foreach ($attachments as $attachment): ?>
             <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center">
                 <?php
@@ -41,7 +41,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                         $date = $item->value('dcterms:date');
                         if ($date):
                         ?>
-                            <h2><small date><?php echo $date; ?></small></h2>
+                        <h2><small date><?php echo $date; ?></small></h2>
                         <?php endif; ?>
                     <?php endif; ?>
                 <?php
