--- a/view/common/block-layout/item-showcase-openseadragon-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-metadata.phtml
@@ -12,48 +12,54 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 </div>
 <div class="full-width-css medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
     <div class="col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
-        <?php foreach ($attachments as $attachment): ?>
-            <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center">
-                <?php
-                $item = $attachment->item();
-                if ($item):
-                    ?>
-                    <?php
-                $media = $attachment->media() ? : $item->primaryMedia();
-                $mediaRenderer = $media->renderer();
-                if ($media) :
-                    echo $media->render([
-                        'thumbnailType' => $thumbnailType,
-                    ]);
-                endif;
+    <?php foreach ($attachments as $attachment): ?>
+        <div class="item-showcase item-showcase-openseadragon item resource margin-bottom-3 text-center">
+            <?php
+            $item = $attachment->item();
+            if ($item):
                 ?>
-                        <?php $showTitleOption = $this->showTitleOption; ?>
-                        <?php if ($showTitleOption == 'item_title'): ?>
-                            <div class="separator-center metadata">
-                                <h2 class="margin-top-1"><?php echo $item->displayTitle(); ?></h2>
-                            </div>
-                        <?php elseif ($showTitleOption == 'file_name'): ?>
-                            <div class="separator-center metadata">
-                                <h2 class="margin-top-1"><?php echo $media->displayTitle(); ?></h2>
-                            </div>
-                        <?php endif; ?>
-                        <?php
-                        $date = $item->value('dcterms:date');
-                            if ($date):
-                            ?>
-                            <h2><small date><?php echo $date; ?></small></h2>
-                        <?php endif; ?>
-                    <?php endif; ?>
                 <?php
-                $caption = $attachment->caption();
-                if ($caption):
-                    ?>
-                    <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
-                <?php endif; ?>
-                <div class="learn-more">
-                    <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
-                </div>
+            $media = $attachment->media() ? : $item->primaryMedia();
+            $mediaRenderer = $media->renderer();
+            if ($media) :
+                echo $media->render([
+                    'thumbnailType' => $thumbnailType,
+                ]);
+            endif;
+            ?>
+                    <?php $showTitleOption = $this->showTitleOption; ?>
+                    <?php if ($showTitleOption == 'item_title'): ?>
+                        <div class="separator-center metadata">
+                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $item->displayTitle(); ?></h2>
+                        </div>
+                    <?php elseif ($showTitleOption == 'file_name'): ?>
+                        <div class="separator-center metadata">
+                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $media->displayTitle(); ?></h2>
+                        </div>
+                    <?php endif; ?>
+                    <?php
+                        $date = $item->value('dcterms:date');
+                        if ($date):
+                        ?>
+                    <h2 class="h3 margin-bottom-0"><small><?php echo $date; ?></small></h2>
+                    <?php endif; ?>
+            <?php
+            $caption = $attachment->caption();
+            if ($caption):
+                ?>
+                <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
+            <?php endif; ?>
+            <?php
+                $identifier = $item->value("dcterms:identifier");
+                if ($identifier): ?>
+                    <p class="h4 margin-bottom-1"><small><?php echo "Ref. " . $identifier; ?></small></p>
+                <?php endif;
+                ?>
+            <?php endif; ?>
+            <div class="learn-more">
+                <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
-        <?php endforeach; ?>
+        </div>
+    <?php endforeach; ?>
     </div>
 </div>
