--- a/view/common/block-layout/item-showcase-openseadragon-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-metadata.phtml
@@ -29,20 +29,19 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
                         <div class="separator-center metadata">
-                            <h2 class="margin-top-1"><?php echo $item->displayTitle(); ?></h2>
+                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $item->displayTitle(); ?></h2>
                         </div>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
                         <div class="separator-center metadata">
-                            <h2 class="margin-top-1"><?php echo $media->displayTitle(); ?></h2>
+                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $media->displayTitle(); ?></h2>
                         </div>
                     <?php endif; ?>
                     <?php
                         $date = $item->value('dcterms:date');
                         if ($date):
                         ?>
-                    <h2 class="h3"><small date><?php echo $date; ?></small></h2>
+                    <h2 class="h3 margin-bottom-0"><small><?php echo $date; ?></small></h2>
                     <?php endif; ?>
-                <?php endif; ?>
             <?php
             $caption = $attachment->caption();
             if ($caption):
@@ -50,11 +49,12 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                 <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
             <?php endif; ?>
             <?php
-            $identifier = $item->value("dcterms:identifier");
+                $identifier = $item->value("dcterms:identifier");
                 if ($identifier): ?>
-                    <h2 class="h4"><small><?php echo "Ref. " . $identifier; ?></small></h2>
+                    <p class="h4 margin-bottom-1"><small><?php echo "Ref. " . $identifier; ?></small></p>
                 <?php endif;
-            ?>
+                ?>
+            <?php endif; ?>
             <div class="learn-more">
                 <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
