Further revisions to Item Showcase block

--- a/view/common/block-layout/item-showcase-openseadragon-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-metadata.phtml
@@ -29,11 +29,11 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
                         <div class="separator-center metadata">
-                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $item->displayTitle(); ?></h2>
+                            <h2 class="margin-top-2 padding-horizontal-1"><?php echo $item->displayTitle(); ?></h2>
                         </div>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
                         <div class="separator-center metadata">
-                            <h2 class="margin-top-1 large-margin-top-2"><?php echo $media->displayTitle(); ?></h2>
+                            <h2 class="margin-top-2 padding-horizontal-1"><?php echo $media->displayTitle(); ?></h2>
                         </div>
                     <?php endif; ?>
                     <?php
@@ -56,7 +56,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                 ?>
             <?php endif; ?>
             <div class="learn-more">
-                <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
         </div>
     <?php endforeach; ?>
