--- a/asset/scss/inkwell.scss
+++ b/asset/scss/inkwell.scss
@@ -30,12 +30,7 @@ a,
     &:hover,
     &:focus {
         color: #000;
-        background-color: lighten($primary-color, 40%);
     }
-}
-
-a.resource-link:hover .resource-name {
-    background-color: lighten($primary-color, 40%);
 }
 
 body.vertical-menu header a {
@@ -65,6 +60,11 @@ span.h4.site-title-label {
     body.vertical-menu header .title-bar button.menu-toggle {
         color: #000;
     }
+}
+
+/*Remove margin from top menu buttons*/ 
+.title-bar button {
+    margin: 0;
 }
 
 /*Update menu bar*/ 
@@ -130,3 +130,18 @@ a:hover {
  ul.dropdown.menu li:hover a {
  color: $white;
  }
+
+ /*Add padding when search button is showed*/ 
+ .search-button.is-shown {
+    padding: $global-padding $global-padding $global-padding 0;
+ }
+
+ /*Change search button background*/ 
+ .search-bar-mobile button.search-icon[aria-expanded=true] {
+    background: transparent;
+ }
+
+ /*Add fill colour to close button*/
+ button.search-icon[aria-expanded=true] svg path {
+    fill: $dark-gray;
+}
