--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -36,7 +36,7 @@ foreach ($itemMedia as $index => $media) {
     $mediaType = $media->mediaType();
     $mediaRenderer = $media->renderer();
         // Add debugging statements
-        echo "Media Renderer: $mediaRenderer, Media Type: $mediaType<br>";
+        // echo "Media Renderer: $mediaRenderer, Media Type: $mediaType<br>";
 
     if ($firstMedia) {
         if ($mediaRenderer == 'iiifPresentation') {
@@ -45,9 +45,6 @@ foreach ($itemMedia as $index => $media) {
         } elseif ($mediaRenderer == 'iiif') {
             $viewers[] = 'mirador';
             $miradorImageViewer = "<div>" . $this->mirador($item) . "</div>";
-            $firstMedia = false;
-        } elseif ($mediaType === 'image/jpeg') {
-            $viewers[] = 'mirador';
             $firstMedia = false;
         } elseif ($mediaRenderer == 'youtube') {
             $viewers[] = 'youtube';
