--- a/view/common/block-layout/resource-text-container-metadata.phtml
+++ b/view/common/block-layout/resource-text-container-metadata.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="attachments max-image-height">
         <?php
             foreach ($attachments as $attachment):
