--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="attachments large-offset-2 xlarge-offset-3">
         <?php
             foreach ($attachments as $attachment):
