Removed hollow button from Item Showcase seadragon

--- a/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width.phtml
@@ -51,7 +51,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                     <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
                 <div class="learn-more">
-                    <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                    <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
                 </div>
             </div>
         <?php endforeach; ?>
