--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -46,7 +46,7 @@ $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
                     <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
                 <div class="learn-more">
-                    <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                    <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
                 </div>
             </div>
         <?php endforeach; ?>
