--- a/view/common/block-layout/item-showcase-video.phtml
+++ b/view/common/block-layout/item-showcase-video.phtml
@@ -49,7 +49,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
             <div class="caption padding-1 grid-container"></div>
             <?php endif; ?>
             <div class="learn-more">
-                <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
         </div>
     <?php endforeach; ?>
