--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -62,33 +62,43 @@ foreach ($itemMedia as $index => $media) {
 }
 ?>
 
-<div class="resource-title">
-    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-    <h2 class="label"><?php echo $translate('Item'); ?></h2>
-</div>
-
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
 
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-        <?php 
-        // Display the main viewer
-        if ($miradorViewer !== null) {
-            echo $miradorViewer;
-        }
-        elseif ($miradorImageViewer !== null) {
-            echo $miradorImageViewer;
-        } 
-        elseif ($universalViewer !== null) {
-            echo $universalViewer;
-        } 
-        elseif ($youtubeViewer !== null) {
-            echo $youtubeViewer;
-        } 
-        elseif ($defaultViewer !== null) {
-            echo $defaultViewer;
-        }
-        ?>
+    <div class="full-width-css margin-bottom-2 xlarge-margin-bottom-3">
+        <div class="grid-x grid-padding-x padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+            <div class="small-12 large-8">
+                <?php 
+                // Display the main viewer
+                if ($miradorViewer !== null) {
+                    echo $miradorViewer;
+                }
+                elseif ($miradorImageViewer !== null) {
+                    echo $miradorImageViewer;
+                } 
+                elseif ($universalViewer !== null) {
+                    echo $universalViewer;
+                } 
+                elseif ($youtubeViewer !== null) {
+                    echo $youtubeViewer;
+                } 
+                elseif ($defaultViewer !== null) {
+                    echo $defaultViewer;
+                }
+                ?>
+            </div>
+            <div class="small-12 large-4 flex-container flex-dir-column padding-left-1 large-padding-left-2 xlarge-padding-left-3">
+                <div class="show-values">
+                    <div class="resource-title margin-bottom-1 large-margin-bottom-2 xlarge-margin-bottom-3">
+                        <?php echo $this->pageTitle($item->displayTitle(), 2); ?>
+                        <h2 class="label"><?php echo $translate('Item'); ?></h2>
+                    </div>
+                    <div class="values">
+                        <?php echo $item->displayValues(); ?>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
