--- a/view/common/block-layout/resource-text-openseadragon-js.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-js.phtml
@@ -30,7 +30,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-7 xlarge-8 large-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-7 xlarge-12 large-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="attachments resource-text-openseadragon">
             <?php foreach ($attachments as $attachment):
 
@@ -73,9 +73,12 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php
             endforeach; ?>
         </div>
-    </div>
-        <div class="off-canvas position-right" id="offCanvas" data-off-canvas>
+    </div>  
+        <div class="off-canvas position-right off-canvas-absolute reveal-for-large" id="offCanvasText" data-off-canvas>
             <div class="resource-text large-5 xlarge-4 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2">
+                <button class="close-button" aria-label="Close menu" type="button" data-close>
+                    <span aria-hidden="true">&times;</span>
+                </button>
                 <div class="metadata margin-bottom-1 separator-center">
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == "item_title"): ?>
@@ -110,5 +113,6 @@ $lang = $filterLocale ? $this->lang() : null;
                 </div>
             </div>
         </div>
+
     </div>
 </div>
