Centred images for Resource Text Openseadragon Multiples

--- a/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
@@ -34,7 +34,7 @@ $lang = $filterLocale ? $this->lang() : null;
        $thumbnailType .
        " captions-" .
        $captionPosition ?> media file large-7 xlarge-8 medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-      <div class="attachments resource-text-openseadragon">
+      <div class="attachments resource-text-openseadragon flex-container flex-dir-column align-middle">
          <?php foreach ($attachments as $attachment):
 
              $render = null;
